src/test/ui/issues/issue-43250.stderr
error: arbitrary expressions aren't allowed in patterns
  --> $DIR/issue-43250.rs:19:8
   |
LL |     m!(y);
   |        ^

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/issue-43250.rs:21:8
   |
LL |     m!(C);
   |        ^

error: aborting due to 2 previous errors

